--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,132 @@
+<!-- Created by Chen Gong 10/2022 -->
 
+<!DOCTYPE html>
+<meta charset="utf-8">
+
+<head>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://d3js.org/d3.v4.js"></script>
+</head>
+
+<body>
+  <div class="consent" style="margin: 1rem 20% 1rem; font-family:Arial, Helvetica, sans-serif;">
+    <img src="./img/Emory-University-Logo.png" style="display: block; margin-left: auto; margin-right:auto; width: 30%"
+      alt="">
+    <h1 style="text-align: center;">
+      Trend Prediction
+    </h1>
+    <p>We are researchers interested in understanding behaviors in people's prediction of
+      trends. You will be asked to perform an attention demanding task on a computer screen. You will be presented with graphs, and will be
+      asked to interact with them
+      as per the provided instructions. Your participation in this study does not involve any risks other than what you
+      would encounter in daily life.
+      You are not likely to have any direct benefit from being in this research study.</p>
+    <h2>Information Regarding the Study</h2>
+    <ul>
+      <li>
+        In this study, you will be presented with charts and its related context. The study will involve you making
+        prediction
+        using trend displayed to you. You will be selecting future points in the chart in order to make the prediction.
+      </li>
+      <li>
+        Please do not consult any external sources while you are completing our study. We anticipate you to be able to
+        answer our questions
+        based only on the information we provide you. We are interested in your approach to answering our questions
+        without the help of
+        external resources.
+      </li>
+      <li>
+        This experiment will take approximately 5 minutes, and you will be compensated.
+      </li>
+      <li>
+        You may only participate in this entire experiment once. You would have to be 18 or older as well as fluent in
+        English to participate. If you
+        have seen this survey before or one like it, please return the study.
+      </li>
+      <li style="color: red;">
+        This experiment cannot be completed with a touch device. If you are using a touch device, please return the
+        study.
+      </li>
+      <li>
+        Please read the consent form below in order to decide whether to participate in this research study.
+      </li>
+    </ul>
+    <h2 style="text-align: center;">Study Consent Form</h2>
+    <p><b>Title of the Project:</b> Trend Prediction</p>
+    <p><b>Principal investigator:</b> Jeremy Montgomery</p>
+    <p>You are invited to participate in a research study. Participation in this research study is voluntary.
+      The information provided on this form is to help you decide whether or not to participate.</p>
+
+    <hr size="1" width="100%" color="black">
+
+    <p><b>Why are we doing this study?</b></p>
+    <p>
+      The purpose of this study is to explore people's prediction of trends. For example, looking 
+      at a stock market trendline, how would you predict the future? The study also includes timed display of previous 
+      trend. Thus, you will have access to previous trend for a controlled time limit and make your predictions accordingly based on prior trends. 
+    </p>
+
+    <p><b>Why are you being asked to be in this research study?</b></p>
+    <p>You are being asked to be in this study because you are age 18 or older and are fluent in English.</p>
+
+    <p><b>What will happen if I take part in this study?</b></p>
+    <p>If you choose to participate in this study, you will complete a computer-based task in which you will make
+      judgments about the relationships between sets of variables.
+      Your total time commitment if you choose to participate will be approximately 5 minutes.</p>
+
+    <p><b>What benefits might I experience?</b></p>
+    <p>You will not benefit directly from being in this study.
+      The broader benefits of this research include improved scientific understanding of people's behavior in trend predictions.</p>
+
+    <p><b>What risks might I experience?</b></p>
+    <p>There are no known or foreseeable risks associated with your participation in this study.</p>
+
+    <p><b>How will my information be protected?</b></p>
+    <p>Research data collected as part of this study will remain confidential to the fullest extent possible and
+      will only be disclosed with your permission or as required by law. Identifiable information (IDs) will be stored
+      separately
+      from all other data collected during this study. Records of your responses during the task will be linked to
+      identifiable
+      data using a master list; this list will be permanently deleted upon completion of the study.
+      Until that point any identifiable information will be stored in protected databases accessible only to the
+      researchers or
+      University administrators, on University-managed infrastructure.
+    </p>
+
+    <p><b>How will my information be used after the study is over?</b></p>
+    <p>After the study is complete, study data may be shared with other researchers for use in other studies or
+      as may be needed for publishing our results. The data we share will NOT include information that could identify
+      you.</p>
+
+    <p><b>Will I receive an incentive for taking part in this study?</b></p>
+    <p>You will receive a compensation of $0.85 to complete the study.
+      If you decide to withdraw from the study prior to completion you will not be eligible for payment. </p>
+
+    <p><b>What are my rights if I take part in this study?</b></p>
+    <p>It is up to you to decide to be in this research study. Participating in this study is voluntary.
+      Even if you decide to be part of the study now, you may change your mind and stop at any time.
+      You do not have to answer any questions you do not want to answer.</p>
+
+    <p><b>Who can answer my questions about this study and my rights as a participant?</b></p>
+    <p>For questions about this research, you may contact the Principal Investigator, Jeremy Montgomery (jeremy.saw.montgomery@emory.edu)
+      ask questions, or discuss any concerns about this study with someone other than the researcher(s),
+      please contact Research Compliance and Regulatory Affairs at Emory University, Ph: 404-727-3889.
+    </p>
+    <p><b>Date:</b>
+      <script>
+        document.write(new Date().toLocaleDateString());
+      </script>
+    </p>
+
+    <button type="button" onClick="window.print();">
+      <span class="glyphicon glyphicon-print"></span> Print a copy of this page
+    </button>
+    <hr>
+    <nav style="text-align: center;">
+      <ul>
+        <a href="survey.html"> <button id="start-button">Start</button></a>
+      </ul>
+    </nav>
+  </div>
+</body>
