--- a/index.html
+++ b/index.html
@@ -15,69 +15,6 @@
         <img src="./img/Emory-University-Logo.png"
             style="display: block; margin-left: auto; margin-right:auto; width: 30%" alt="">
         <h1 style="text-align: center;">Study Instructions</h1>
-        <p>
-            Welcome! Thank you again for participating in our study. On this page, we present instructions on how to
-            complete the trials. Please carefully read the following instructions as your performance is dependent on
-            understanding the task.
-        </p>
-        <hr>
-        <h2>Instructions</h2>
-        <p>
-            Our study involves three parts: “visual”, “tactile”, and “tabular”.
-        </p>
-        <ul>
-            <li>
-                The “visual” part of the study will involve you inspecting some simple geometric shapes on a computer
-                display. This condition has 42 trials. You will first identify the smaller visual encoding. Then, in a
-                number between 0 and 100, you will estimate what the proportion of the smaller encoding is to the larger
-                one.
-            </li>
-            <li>
-                The “tactile” part will involve inspecting some geometric shapes on embossed paper by touching the
-                paper with your hands and answering questions. You will be <b style="color: red;">blindfolded</b> with a
-                piece of cloth for this
-                part of the study. This condition has 42 trials. You will first locate the tactile pair on the embossed
-                paper. Then, same to the "visual" condition, you will answer orally to the study administrator which one
-                is the smaller encoding. Finally, you will answer to the study administrator a number between 0 and 100
-                of what the proportion of the smaller encoding is to the larger one.
-            </li>
-            <li>
-                Finally, the “tabular” part will involve viewing a data table on a computer display or using a screen
-                reader and answering questions.  This condition has 7 trials. In this condition, you will only need to
-                answer to the study administrator a number between 0 and 100
-                of what the proportion of the smaller encoding is to the larger one.
-            </li>
-        </ul>
-        <p>
-            In a single trial across all three conditions, you will compare a pair of values encoded in visual, tactile,
-            tabular form. Upon comparing the patterns, you will <b>orally </b>answer to the researcher:
-            <ul>
-                <li>
-                    <b>which one (left or right) in the pair is of
-                        the
-                        <b style="color: red;">smaller quantity</b>.
-                </li>
-                <li>
-                    </b> Then, you will answer again and <b>provide a number
-                        between 0 and 100 to indicate the
-                        <b style="color:red;">proportion</b></b> of the smaller element (from your previous answer) to
-                    the
-                    larger one.
-                </li>
-            </ul>
-            Note that since both
-            “visual” and “tabular” parts will be conducted using a computer, you will complete these two parts
-            <b>together
-                on a computer in random order</b>. You will perform the “tactile” part of our study separately on paper
-            while
-            blind-folded.
-
-            For trials that were completed using both computer and embossed paper, we organized them into blocks of 7
-            trials. In visual conditions, each trial will be displayed on a separate webpage. After every 7 trials, you
-            will encounter a "page break," which allows you to choose whether to continue or not. Similarly, in tactile
-            conditions, we will pause after every 7 trials.
-
-        </p>
 
         <hr>
         <h2> Encoding Types</h2>
@@ -89,31 +26,16 @@
         </p>
 
         <h3>Lines</h3>
-        <p>In encoding type “lines”, numerical values are represented in lengths. You will inspect the pair of lines
-            directly by comparing their difference in <b>lengths</b>. An example of a pair of two lines encodings: </p>
         <div class="example-svg">
             <svg baseProfile="full" height="6cm" version="1.1" width="12cm" xmlns="http://www.w3.org/2000/svg"
                 xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <defs />
-                <line stroke="black" stroke-width="4" transform="rotate(41,112.80000000000001,112.80000000000001)"
-                    x1="3cm" x2="3cm" y1="2.25cm" y2="3.75cm" />
-                <line stroke="black" stroke-width="4" transform="rotate(-26,338.40000000000003,112.80000000000001)"
-                    x1="9cm" x2="9cm" y1="1.5cm" y2="4.5cm" /><text x="218.08" y="218.08">A</text><text
-                    x="443.68000000000006" y="218.08">B</text></svg>
+                <line stroke="black" stroke-width="4" x1="3cm" x2="3cm" y1="1.9cm" y2="4.1cm" />
+                <line stroke="black" stroke-width="4" x1="9cm" x2="9cm" y1="0.7999999999999998cm" y2="5.2cm" /></svg>
         </div>
-        <p>
-            In this example, “Line A” is shorter than “Line B” in length, thus it is the smaller element in the pair.
-            “Line A” is 50% in length of “Line B”.
-        </p>
         <hr>
 
         <h3>Areas</h3>
-        <p>
-            In encoding type "areas", numerical values are represented in areas in circles. The area of a circle is the
-            measure of <b>the amount of space enclosed by the circle</b>. You will inspect the pair of
-            circles
-            and compare their difference in areas. An example of a pair of two area encodings:
-        </p>
         <div class="example-svg">
             <svg baseProfile="full" height="6cm" version="1.1" width="12cm" xmlns="http://www.w3.org/2000/svg"
                 xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -122,43 +44,27 @@
                     width="10">
                     <line stroke="black" stroke-width="3" x1="0" x2="0" y1="0" y2="10" />
                 </pattern>
-                <circle cx="9cm" cy="3cm" fill="url(#pattern)" r="1.5cm" stroke="black" stroke-width="2" />
-                <circle cx="3cm" cy="3cm" fill="url(#pattern)" r="1.9364916731037083cm" stroke="black"
-                    stroke-width="2" /><text x="218.08" y="218.08">A</text><text x="443.68000000000006"
-                    y="218.08">B</text>
+                <circle cx="9cm" cy="3cm" fill="url(#pattern)" r="2.8cm" stroke="black" stroke-width="3" />
+                <circle cx="3cm" cy="3cm" fill="url(#pattern)" r="1.9798989873223332cm" stroke="black"
+                    stroke-width="3" />
             </svg>
         </div>
-        <p>
-            In this example, "Area B" is smaller in its enclosed region than "Area A", thus it is the smaller element in
-            the pair.
-            "Area B" is 50% of "Area A" in area.
-        </p>
         <hr>
 
 
         <h3>Curves</h3>
-        <p>
-            In encoding type "curves", numerical values are represented in the value of <b>curvature</b>. Curvature is a
-            measure of <b>how much a curve deviates from being a stright line</b>. You will inspect the pair of curves
-            and
-            compare their difference in the value of curvature. An example of a pair of two curve encodings: </p>
         <div class="example-svg">
             <svg baseProfile="full" height="6cm" version="1.1" width="12cm" xmlns="http://www.w3.org/2000/svg"
                 xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <defs /><text x="218.08" y="218.08">A</text><text x="443.68000000000006" y="218.08">B</text>
+                <defs />
                 <path
-                    d="M 56.400000000000006,112.80000000000001 C 112.80000000000001,78.96000000000001 112.80000000000001,78.96000000000001 169.20000000000002,112.80000000000001"
+                    d="M 56.400000000000006,112.80000000000001 C 112.80000000000001,56.400000000000006 112.80000000000001,56.400000000000006 169.20000000000002,112.80000000000001"
                     fill="none" stroke="black" stroke-width="3"
-                    transform="rotate(78,112.80000000000001,112.80000000000001)" />
-                <path
-                    d="M 282.0,112.80000000000001 C 338.4,45.120000000000005 338.4,45.120000000000005 394.8,112.80000000000001"
-                    fill="none" stroke="black" stroke-width="3"
-                    transform="rotate(49,338.40000000000003,112.80000000000001)" /></svg>
+                    transform="rotate(41,112.80000000000001,112.80000000000001)" />
+                <path d="M 282.0,112.80000000000001 C 338.4,0.0 338.4,0.0 394.8,112.80000000000001" fill="none"
+                    stroke="black" stroke-width="3" transform="rotate(-15,338.40000000000003,112.80000000000001)" />
+                </svg>
         </div>
-        <p>
-            In this example, "Curve A" is smaller than "Curve B" in the value of curvature. "Curve A" is 50% of "Curve
-            B" in the value of curvature.
-        </p>
         <hr>
         <div style="margin-bottom: 5%;">
             <b>Click "Proceed" to see more explanations on encoding types.</b>
