--- a/trans.html
+++ b/trans.html
@@ -13,9 +13,10 @@
     <div style="margin: 1rem 20% 1rem; font-family:Arial, Helvetica, sans-serif; text-align: center;">
         <img src="./img/Emory-University-Logo.png"
             style="display: block; margin-left: auto; margin-right:auto; width: 30%" alt="">
-        <h2>Before proceeding to the official trials, please inform study administrator about any questions you have.
+        <h2>Allow Study Administrator to select the below options for you. Before proceeding to the official trials, please inform study administrator about any questions you have.
             This will be the final page before the actual study. Good luck!</h2>
-        <button onclick="window.location.href = 'trial.html';" style="margin-top: 50px;">Start</button>
+        <button onclick="window.location.href = 'trial.html';" style="margin-top: 50px;">Visual Condition Trials</button>
+        <button onclick="window.location.href = 'table.html';" style="margin-top: 50px;">Tabular Condition Trials</button>
     </div>
 </body>
 
