Fixed practice trials

--- a/encoding.html
+++ b/encoding.html
@@ -93,7 +93,7 @@
                 you continue. Click the "proceed" button below to perform practice trials. </b>
             <div style="text-align: center; margin-top: 5%; margin-bottom: 5%;">
                 <nav>
-                    <a id="survey-link" href="practice.html">
+                    <a id="survey-link" href="trans.html">
                         <button>Proceed</button>
                     </a>
                 </nav>
