--- a/trans.html
+++ b/trans.html
@@ -15,6 +15,7 @@
             style="display: block; margin-left: auto; margin-right:auto; width: 30%" alt="">
         <h2>Allow Study Administrator to select the below options for you. Before proceeding to the official trials, please inform study administrator about any questions you have.
             This will be the final page before the actual study. Good luck!</h2>
+        <button onclick="window.location.href = 'practice.html';" style="margin-top: 50px;">Visual Condition Practice Trials</button>
         <button onclick="window.location.href = 'trial.html';" style="margin-top: 50px;">Visual Condition Trials</button>
         <button onclick="window.location.href = 'table.html';" style="margin-top: 50px;">Tabular Condition Trials</button>
     </div>
