Added enhanced table

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         <button onclick="window.location.href = 'trial.html';" style="margin-top: 50px;">Visual Condition Trials</button>
         <button onclick="window.location.href = 'table.html';" style="margin-top: 50px;">Tabular Condition Trials</button>
         <button onclick="window.location.href = 'table_practice.html';" style="margin-top: 50px;">Tabular Condition Practice Trials</button>
+        <button onclick="window.location.href = 'enhanced_table.html';" style="margin-top: 50px;">Enhanced Table Examples</button>
     </div>
 </body>
